# bumperbotws

./: .gitignore  deploy_to_pi.sh  test_motors.py
install/: setup.sh
src/bumperbot_bringup/launch/: real_robot.launch.py
src/bumperbot_controller/config/: joy_teleop.yaml
src/bumperbot_controller/launch/: joystick_teleop.launch.py
src/bumperbot_coverage/: package.xml  setup.cfg  setup.py
src/bumperbot_coverage/bumperbot_coverage/: spiral_coverage.py  stadium_coverage.py  wall_follow_coverage.py
src/bumperbot_cpp_examples/: CMakeLists.txt
src/bumperbot_cpp_examples/src/: simple_action_server.cpp
src/bumperbot_cpp_examples2/: CMakeLists.txt  package.xml
src/bumperbot_description/launch/: gazebo.launch.py
src/bumperbot_description/rviz/: slam_display.rviz
src/bumperbot_hardware/: setup.cfg  setup.py
src/bumperbot_hardware/bumperbot_hardware/: arc_test.py  calibrate_encoders.py  diagnose_slam.py  drive_straight_test.py  encoder_reader.py  motor_driver.py  odometry.py  parameters.py  pid.py  spin_test.py  (+5 more)
src/bumperbot_localization/: CMakeLists.txt  package.xml
src/bumperbot_mapping/: CMakeLists.txt  mapper_params_online_async.yaml  package.xml
src/bumperbot_msgs/: package.xml
src/bumperbot_odometry/: package.xml  setup.cfg  setup.py
src/bumperbot_py_examples/: package.xml  setup.py
src/bumperbot_py_examples/bumperbot_py_examples/: simple_action_server.py  simple_qos_subscriber.py
src/bumperbot_py_examples1/: package.xml  setup.cfg  setup.py
src/bumperbot_utils/: CMakeLists.txt  package.xml
src/encoder_reader/: package.xml  setup.py
(+36 files in other folders)
